Update package.json: added bin, files, npm-scripts: build, prepublishOnly, repository

--- a/package.json
+++ b/package.json
@@ -1,12 +1,24 @@
 {
-  "name": "brain-games",
-  "version": "0.0.1",
+  "name": "brain-games-podkovyrov",
+  "version": "0.0.5",
   "description": "Console games (an educational project by hexlet.io)",
   "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+  "bin": {
+    "brain-games": "dist/bin/brain-games.js"
   },
-  "author": "",
+  "files": [
+    "dist"
+  ],
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "NODE_ENV=production babel src --out-dir dist --source-maps inline",
+    "prepublishOnly": "npm run build"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/podkovyrovda/project-lvl1-s438.git"
+  },
+  "author": "Andrey Podkovyrov",
   "license": "ISC",
   "devDependencies": {
     "@babel/cli": "^7.2.3",
