--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "brain-games-podkovyrov",
-  "version": "0.0.5",
+  "version": "0.1.1",
   "description": "Console games (an educational project by hexlet.io)",
   "keywords": [
     "console game"
@@ -26,6 +26,10 @@
     "@babel/cli": "^7.2.3",
     "@babel/core": "^7.2.2",
     "@babel/node": "^7.2.2",
-    "@babel/preset-env": "^7.3.1"
+    "@babel/preset-env": "^7.3.1",
+    "readline-sync": "^1.4.9"
+  },
+  "dependencies": {
+    "readline-sync": "^1.4.9"
   }
 }
