--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "brain-games-podkovyrov",
-  "version": "1.0.4",
+  "version": "1.1.0",
   "description": "Console games (an educational project by hexlet.io)",
   "keywords": [
     "console game"
@@ -32,9 +32,11 @@
     "eslint": "^5.13.0",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.16.0",
+    "hexlet-pairs": "^1.0.8",
     "readline-sync": "^1.4.9"
   },
   "dependencies": {
+    "hexlet-pairs": "^1.0.8",
     "readline-sync": "^1.4.9"
   }
 }
