--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "brain-games-podkovyrov",
-  "version": "1.1.0",
+  "version": "2.0.0",
   "description": "Console games (an educational project by hexlet.io)",
   "keywords": [
     "console game"
   ],
   "bin": {
     "brain-games": "dist/bin/brain-games.js",
-    "brain-even": "dist/bin/brain-even.js"
+    "brain-even": "dist/bin/brain-even.js",
+    "brain-calc": "dist/bin/brain-calc.js"
   },
   "files": [
     "dist"
