--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "brain-games-podkovyrov",
-  "version": "2.1.1",
+  "version": "2.2.0",
   "description": "Console games (an educational project by hexlet.io)",
   "keywords": [
     "console game"
@@ -9,7 +9,8 @@
     "brain-games": "dist/bin/brain-games.js",
     "brain-even": "dist/bin/brain-even.js",
     "brain-calc": "dist/bin/brain-calc.js",
-    "brain-gcd": "dist/bin/brain-gcd.js"
+    "brain-gcd": "dist/bin/brain-gcd.js",
+    "brain-progression": "dist/bin/brain-progresion.js"
   },
   "files": [
     "dist"
